<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/cevap1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:foregroundTint="#711051"
        android:tag="1"
        android:text="@string/A"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@+id/soru"
        app:layout_constraintStart_toStartOf="@+id/soru"
        app:layout_constraintTop_toBottomOf="@+id/soru" />

    <Button
        android:id="@+id/cevap2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:tag="2"
        android:text="@string/B"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@+id/cevap1"
        app:layout_constraintStart_toStartOf="@+id/cevap1"
        app:layout_constraintTop_toBottomOf="@+id/cevap1" />

    <Button
        android:id="@+id/cevap3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:tag="3"
        android:text="@string/C"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@+id/cevap2"
        app:layout_constraintStart_toStartOf="@+id/cevap2"
        app:layout_constraintTop_toBottomOf="@+id/cevap2" />

    <Button
        android:id="@+id/cevap4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:tag="4"
        android:text="@string/D"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@+id/cevap3"
        app:layout_constraintStart_toStartOf="@+id/cevap3"
        app:layout_constraintTop_toBottomOf="@+id/cevap3" />

    <Button
        android:id="@+id/sinaviBaslat"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="66dp"
        android:background="#3F51B5"
        android:text="@string/TestiTekrarBaslat"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/puan"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:text="@string/Puan"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/cevap4"
        app:layout_constraintStart_toStartOf="@+id/cevap4"
        app:layout_constraintTop_toBottomOf="@+id/cevap4" />

    <TextView
        android:id="@+id/soru"
        android:layout_width="318dp"
        android:layout_height="65dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnmenuyegeridon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="66dp"
        android:text="@string/menüyegeridön"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sinaviBaslat"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>